force-app/main/default/objects/cgcloud__Template_Type__mdt/cgcloud__Template_Type__mdt.object-meta.xml
<CustomObject>
    <label>Template Type</label>
    <pluralLabel>Template Types</pluralLabel>
</CustomObject>