force-app/main/default/objects/cgcloud__Template_Type__mdt/fields/cgcloud__Active_Flag_Field__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Active_Flag_Field__c</fullName>
    <description>Field name that determines whether the Type is active (should be included) or not</description>
    <inlineHelpText>Field name that determines whether the Type is active (should be included) or not</inlineHelpText>
    <label>Active Flag Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>