force-app/main/default/objects/cgcloud__Template_Type__mdt/fields/cgcloud__Description_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Description_Field_Name__c</fullName>
    <description>Field that maps to the Description of the Template object</description>
    <inlineHelpText>Field that maps to the Description of the Template object</inlineHelpText>
    <label>Description Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>