force-app/main/default/objects/cgcloud__Template_Type__mdt/fields/cgcloud__Template_Definition__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Template_Definition__c</fullName>
    <label>Template Definition</label>
    <referenceTo>cgcloud__Template_Definition__mdt</referenceTo>
    <relationshipLabel>Template Types</relationshipLabel>
    <relationshipName>Template_Types</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>