force-app/main/default/objects/cgcloud__Template_Type__mdt/fields/cgcloud__Template_Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Template_Lookup_Field__c</fullName>
    <description>Field used to link the object to the parent template object</description>
    <inlineHelpText>Field used to link the object to the parent template object</inlineHelpText>
    <label>Template Lookup Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>