force-app/main/default/objects/cgcloud__Template_Type__mdt/fields/cgcloud__Template_Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Template_Sales_Org__c</fullName>
    <label>Template Sales Org</label>
    <length>255</length>
    <type>Text</type>
</CustomField>