force-app/main/default/objects/cgcloud__Template_Type__mdt/fields/cgcloud__Template_SObject_Name__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Template_SObject_Name__c</fullName>
    <description>SObject name for the template</description>
    <inlineHelpText>SObject name for the template</inlineHelpText>
    <label>Template SObject Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>